--- a/css/style.css
+++ b/css/style.css
@@ -1044,6 +1044,8 @@ footer .horde-icon {
             width: 250px;
             height: auto;
             border-radius: 8px;
+            animation: pulse-dark 4s ease-in-out infinite;
+            position: relative;
         }
 
         .neverest-text {
